# poloka-cern

./: INSTALL  Makefile.am  README  configure.ac  wscript
doc/: poloka_to_cern.sh
m4/: ax_cernlib.m4  cernlib.m4
src/: wscript
tools/: 2im2tup.cc  Makefile.am  im2tup.cc  mkskyhist.cc  pka-2fits2hbook.cc  pka-fits2hbook.cc  pka-hist2hbook.cc  pka-list2hbook.cc  sky_hist.cc  wscript
